# momentum

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ENCOURAGEMENTS.md  IMAGES.md  Makefile  README.md  SCIENCE.md  momentum.spec  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/agents/: momentum-steward.agent.md
.github/instructions/: 01-core-rules.md  02-architecture-and-performance.md  03-release-and-versioning.md  04-android-release-safety.md  05-validation-gates.md  06-ci-and-runtime.md  07-runtime-diagnostics.md
.github/prompts/: cross-surface-parity.prompt.md  feature-workflow.prompt.md
.github/workflows/: ci.yml  play-publish.yml
mobile/: ENCOURAGEMENTS.md  IMAGES.md  SCIENCE.md  buildozer.spec  main.py  momentum
momentum/: __init__.py  _assessments_cy.pyi  _charts_cy.pyi  _timer_cy.pyi  assessments.py  assessments_cy.c  assessments_cy.pyx  autostart.py  charts.py  charts_cy.c  charts_cy.pyx  cli.py  config.py  db.py  display.py  encouragement.py  gui.py  models.py  services.py  timer.py  timer_cy.c  timer_cy.pyx
momentum/domain/: __init__.py  timer.py
momentum/domain/assessments/: __init__.py  interpretation.py  profile.py  scoring.py
momentum/ui/: __init__.py  charts.py  display.py  mobile_sections.py  mobile_stroop.py  palette.py  update_check.py
tests/: test_assessments.py  test_autostart.py  test_charts.py  test_cli.py  test_config.py  test_db.py  test_mobile_button_wiring.py  test_mobile_sections.py  test_mobile_stroop.py  test_mobile_timer_state.py  test_mobile_ui_contract.py  test_models.py  test_profile.py  test_services.py  test_timer.py  test_update_check.py
